# test-task-python-junior-django

./: README.md  docker-compose.yml  env.empty  env.example
.github/workflows/: docker-image.yml
django/: Dockerfile  Dockerfile.gunicorn  db.sqlite3  entrypoint.sh  pyproject.toml
django/api/: serializers.py  urls.py  views.py
django/core/: settings.py
django/core/fixtures/: models_data.json
django/stations/: models.py
django/stations/migrations/: 0001_initial.py  0002_alter_pointing_axis.py  0003_alter_spacestation_date_created.py  0004_alter_spacestation_date_created.py
nginx/: Dockerfile  nginx.conf
