[tool.poetry]
name = "test-task-python-junior-django"
version = "0.1.0"
description = ""
authors = ["Karim Akhmetov <kakhmetov@usetech.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.24.2"
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-django = "^4.5.2"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
